# xBulk

./: .gitignore  Cargo.toml  README.md  build.sh  build_with_docker.py  deploy-testnet.interaction.json  deploy.interaction.json  erdpy.json  snippets.sh
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/target 3/release/.fingerprint/ahash-2f3a6be68804c764/: build-script-build-script-build 2.json
wasm/target 3/release/.fingerprint/endian-type-1ffcf54973cae2c1/: lib-endian-type 2.json
wasm/target 3/release/.fingerprint/hex-2f36bd91fc5a930a/: lib-hex 2.json
wasm/target 3/release/.fingerprint/hex-literal-d1030b10abc1fe80/: lib-hex-literal 2.json
wasm/target 3/release/.fingerprint/nibble_vec-4f8561b252386c56/: lib-nibble_vec 2.json
wasm/target 3/release/.fingerprint/proc-macro-hack-23e7cbb1272f7f75/: lib-proc-macro-hack 2.json
wasm/target 3/release/.fingerprint/proc-macro-hack-4804f27d1e359177/: run-build-script-build-script-build 2.json
wasm/target 3/release/.fingerprint/proc-macro-hack-dedce42c1528145b/: build-script-build-script-build 2.json
wasm/target 3/release/.fingerprint/proc-macro2-0931b94b78f49648/: build-script-build-script-build 2.json
wasm/target 3/release/.fingerprint/proc-macro2-34b7a6cc1a6e56f8/: lib-proc-macro2 2.json
wasm/target 3/release/.fingerprint/proc-macro2-84afaa8ffdc43a40/: run-build-script-build-script-build 2.json
wasm/target 3/release/.fingerprint/quote-33535a1d0f88b756/: lib-quote 2.json
wasm/target 3/release/.fingerprint/radix_trie-b398668ab4c2bff7/: lib-radix_trie 2.json
wasm/target 3/release/.fingerprint/syn-04f585347d0d3b29/: run-build-script-build-script-build 2.json
wasm/target 3/release/.fingerprint/syn-4c39d3f41a4a5c40/: build-script-build-script-build 2.json
wasm/target 3/release/.fingerprint/unicode-xid-aa33baf7cb12cf39/: lib-unicode-xid 2.json
wasm/target 3/release/.fingerprint/version_check-d652df406d5d8773/: lib-version_check 2.json
wasm/target 3/release/.fingerprint/wee_alloc-2d4cab22ffcfd6d7/: build-script-build-script-build 2.json
(+40 files in other folders)
