[package]
name = "xbulk"
version = "1.0.0"
authors = [ "Alessandro De Franceschi <info@defralcoding.it>",]
edition = "2021"
publish = false

[lib]
path = "src/xbulk.rs"

[dependencies.elrond-wasm]
version = "0.34.1"

[dependencies.elrond-wasm-modules]
version = "0.34.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.34.1"
