[package]
name = "xbulk"
version = "2.0.0"
authors = ["Alessandro De Franceschi <info@defralcoding.it>"]
edition = "2021"
publish = false

[lib]
path = "src/xbulk.rs"

[dependencies.multiversx-sc]
version = "0.41.0"

[dependencies.multiversx-sc-modules]
version = "0.41.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.41.0"
